syntax = "proto3";

package echo.v1;

option go_package = "github.com/kapetndev/grpctest/echo/v1;echo";

service EchoService {
  rpc Echo(EchoRequest) returns (EchoResponse);
  rpc ServerStreamingEcho(ServerStreamingEchoRequest) returns (stream ServerStreamingEchoResponse);
  rpc ClientStreamingEcho(stream ClientStreamingEchoRequest) returns (ClientStreamingEchoResponse);
}

message EchoRequest {
  string message = 1;
}

message EchoResponse {
  string message = 1;
}

message ServerStreamingEchoRequest {
  string message = 1;
}

message ServerStreamingEchoResponse {
  string message = 1;
}

message ClientStreamingEchoRequest {
  string message = 1;
}

message ClientStreamingEchoResponse {
  string message = 1;
}
